...
                app:cardCornerRadius="@dimen/cardview_item_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/qrview_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/qrview_name_placeholder"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="20sp" />
...
                        <TextView
                            android:id="@+id/qrview_score_header"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="4dp"
                            android:gravity="center"
                            android:text="@string/qrview_score"
                            android:textColor="?attr/colorOnPrimary"
                            android:textSize="@dimen/qrview_header_size" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/qrview_score_card"
...
                            android:textSize="@dimen/qrview_content_size" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <!-- Image -->
                <ImageView
                    android:id="@+id/qrview_photo"
                    android:layout_width="256dp"
                    android:layout_height="256dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/qrview_image_description"
                    android:visibility="gone" />
            </LinearLayout>

            <!-- Geolocation container -->
            <LinearLayout
                android:id="@+id/qrview_geoloc_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
                    <TextView
                        android:id="@+id/qrview_geoloc_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="4dp"
                        android:gravity="center"
                        android:text="@string/qrview_geoloc"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="@dimen/qrview_header_size" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/qrview_geoloc_card"
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/qrview_other_scans"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="10dp"
                            android:gravity="center"
                            android:text="@string/qrview_times_capped_placeholder"
                            android:textColor="?attr/colorOnSecondary"
                            android:textSize="@dimen/qrview_content_size" />

                        <Button
                            android:id="@+id/qrview_other_scans_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/view_players_label" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/qrview_playerlist"
                                android:visibility="gone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginVertical="8dp"
                                android:layout_marginHorizontal="64dp"
                                app:layout_constraintHeight_max="200dp"
...
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <Button
                android:id="@+id/qrview_comments_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/view_comments_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/qrview_other_scans_container" />

            <!-- Owner button container -->
            <Button
                android:id="@+id/qrview_delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="@color/vermilion"
                android:text="@string/delete_qrcode"
                app:layout_constraintEnd_toEndOf="parent"
...
