...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/comments_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/comment_hint"
                android:autofillHints=""
                android:inputType="text"
                android:layout_marginHorizontal="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/comments_post_button"
                android:imeOptions="actionSend"/>

            <Button
                android:id="@+id/comments_post_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
